--- a/social-links-profile-main/social-links-profile-main/styles.css
+++ b/social-links-profile-main/social-links-profile-main/styles.css
@@ -12,11 +12,11 @@ body {
 }
 
 .container {
-  width: 90%;
+  width: 88%;
   max-width: 375px;
-  margin: 5rem auto;
+  margin: 8rem auto;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 12px;
   padding-bottom: 1rem;
   font-family: "Inter", sans-serif;
   background-color: hsl(0, 0%, 12%);
@@ -30,41 +30,47 @@ img {
 
 h2 {
   margin: 1rem 0 0.7rem 0;
-  font-weight: 600;
-}
-
-h6 {
-  font-size: 0.92rem;
-  font-weight: 500;
-  color: hsl(75, 94%, 57%);
-  margin-bottom: 1rem;
+  font-weight: 700;
 }
 
 .container p:first-of-type {
   font-size: 0.9rem;
+  font-weight: 500;
+  color: hsl(75, 94%, 57%);
+  margin-bottom: 1.8rem;
+}
+
+.second-p {
+  font-size: 0.85rem;
   font-weight: 300;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+ul {
+  width: 95%;
+  margin: 0 auto;
 }
 
 ul li {
-  list-style: none;
-}
-
-li {
-  width: 290px;
   margin: 1rem;
-  padding: 0.9rem;
-  font-weight: 500;
+  padding: 0.8rem;
+  list-style: none;
+  font-weight: 700;
   border-radius: 8px;
   background-color: hsl(0, 0%, 20%);
 }
 
 .attribution {
+  font-family: "Inter", sans-serif;
+
   font-size: 11px;
   text-align: center;
   color: white;
+  margin-top: -3rem;
+  margin-bottom: 2rem;
 }
 .attribution a {
-  /* color: hsl(228, 45%, 44%); */
-  color: white;
+  color: hsl(75, 94%, 57%);
+  font-style: italic;
+  text-decoration: none;
 }
