--- a/social-links-profile-main/social-links-profile-main/styles.css
+++ b/social-links-profile-main/social-links-profile-main/styles.css
@@ -88,7 +88,7 @@ ul li a:hover {
   font-size: 10px;
   text-align: center;
   color: white;
-  margin-top: -4rem;
+  margin-top: -6.5rem;
   margin-bottom: 1rem;
 }
 .attribution a {
@@ -100,6 +100,10 @@ ul li a:hover {
 /* Desktop Styles */
 
 @media (max-width: 1440px) {
+  .container {
+    margin-top: 20rem;
+  }
+
   ul {
     width: 90%;
   }
